poms fix